--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/lib/leaflet.css" />
     <script src="assets/lib/leaflet.js"></script>
+    <script src="https://elfalem.github.io/Leaflet.curve/src/leaflet.curve.js"></script>
     <script src="assets/lib/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js" ></script>
 
     <script src="assets/data/countries_e-f.js"></script>
     <script src="assets/data/country_s_d.js"></script>
+    <script src="assets/data/europe.js"></script>
 </head>
 
 <body>
